# web_project

./: .env  .gitignore  Dockerfile  README.md  admin.py  admin_setup.py  check_test.py  config.py  docker-compose.yml  main.py  pre-commit-config.yaml  pyproject.toml  setup.py  test.py  test_main.http
.github/workflows/: lint.yaml  public.yaml
api/: __init__.py  fastapp.py  image.py  news.py  news_image.py  product.py  product_image.py  type_of_product.py
app/: config.py  main.py  setup.py
app/api/: autocomplete.py  cert.py  cert_image.py  fastapp.py  news.py  news_image.py  product.py  product_image.py  request_for_product.py  type_of_product.py  update_to_superuser.py
app/auth/: __init__.py  db.py  router.py  transport_and_strategy.py  user_auth.py  user_manager.py
app/crud/: cert_crud.py  cert_image_crud.py  news_crud.py  news_image_crud.py  product_crud.py  product_image_crud.py  request_crud.py  type_of_product_crud.py
app/db/: db_connection.py
app/minio_router/: __init__.py  connection.py
app/models/: __init__.py  cert.py  cert_image.py  news.py  news_image.py  (+4 more)
auth/: __init__.py  db.py  transport.py  transport_and_strategy.py  user_manager.py
crud/: crud.py  image_crud.py  news_crud.py  news_image_crud.py  product_crud.py  product_image_crud.py  type_of_product_crud.py
db/: __init__.py  db_connection.py  models.py  service.py
docker/: Dockerfile  docker_code
etc/: etc_code
frontend/: index.html  test.js
keys_https/: cert.pem  key.pem
models/: __init__.py  image.py  news.py  product.py  request_product.py  type_of_product.py
shema/: __init__.py  base.py  news.py  news_image.py  product.py  product_image.py  products_in_request.py  request.py  request_porduct.py  type_of_product.py
(+69 files in other folders)
