[tool.poetry]
name = "web-project"
version = "0.1.0"
description = ""
authors = ["Alan <tyujn24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pedantic = "^1.14.6"
sqlalchemy = "^2.0.20"
swagger-ui = "^0.1.2"
redis = "^5.0.0"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
typer = "^0.9.0"
python-jose = "^3.3.0"
celery = "^5.3.4"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
