[tool.poetry]
name = "web-project"
version = "0.1.0"
description = ""
authors = ["Alan <tyujn24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pedantic = "^1.14.6"
sqlalchemy = "^2.0.20"
swagger-ui = "^0.1.2"
redis = "^5.0.0"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
typer = "^0.9.0"
python-jose = "^3.3.0"
celery = "^5.3.4"
passlib = "^1.7.4"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 121
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
ignore = ["F401"]